--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -230,7 +230,7 @@
    "source": [
     "checkpoint = ModelCheckpoint(\"../models/img-classificator\", monitor = \"val_accuracy\", verbose = 1, save_best_only = True, save_weights_only = False, mode = \"auto\")\n",
     "early = EarlyStopping(monitor = \"val_accuracy\", patience = 3, verbose = 1, mode = \"auto\")\n",
-    "hist = model.fit(train_data, steps_per_epoch = 100, validation_data = test_data, validation_steps = 10, epochs = 3, callbacks = [checkpoint, early])"
+    "hist = model.fit(train_generator, steps_per_epoch = 100, validation_data = validation_generator, validation_steps = 10, epochs = 3, callbacks = [checkpoint, early])"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "img = np.asarray(img)\n",
     "plt.imshow(img)\n",
     "img = np.expand_dims(img, axis = 0)\n",
-    "saved_model = load_model(\"../models/vgg16_1.h5\")\n",
+    "saved_model = load_model(\"../models/img-classificator\")\n",
     "output = saved_model.predict(img)\n",
     "if output[0][0] > output[0][1]:\n",
     "    print(\"cat\")\n",
